objects/recordval__rv2AutoProcessScenario__c.object
<CustomObject>
    <fields>
        <fullName>recordval__DqName__c</fullName>
        <label>DqName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__Options__c</fullName>
        <label>Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>recordval__ScenarioName__c</fullName>
        <label>ScenarioName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Record Validation Auto Process Scenario</label>
    <nameField>
        <label>Record Validation Auto Process Scenario</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Validation Auto Process Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>